The language of the shapeshift terms of policy is not specific to enabling the policy. Add a screen for the SignExchange button request. When the user cancels an exchange, the screen navigates to the previous screen. Currency amounts can be deisplayed correctly when they are passed in as a string.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -906,13 +906,19 @@ button.fa {
   }
 }
 
-#label, #pin, #character-request, #device-settings, #support {
+#label, #pin, #character-request, #device-settings, #support, #confirm-exchange {
   .content {
     padding-top: 10px;
     h2 {
       padding-bottom: 10px;
       border-bottom: 1px solid @interior-border-color;
     }
+  }
+}
+
+#confirm-exchange {
+  .content .content-inner {
+    height: 100px;
   }
 }
 
@@ -1524,6 +1530,12 @@ a, a:hover {
     .wallet-currency {
       display: none;
     }
+  }
+}
+
+.cryptocurrency-amount {
+  &:before, &:after {
+    content: ' ';
   }
 }
 
